[feature] Project customer refactor
