# gestepm-model-api/src/main/java/com/epm/gestepm/modelapi/customer/service/CustomerService.java
@@ -1,13 +1,20 @@
 package com.epm.gestepm.modelapi.customer.service;
 
-import com.epm.gestepm.modelapi.customer.dto.Customer;
+import com.epm.gestepm.modelapi.customer.dto.CustomerDto;
+import com.epm.gestepm.modelapi.customer.dto.creator.CustomerCreateDto;
+import com.epm.gestepm.modelapi.customer.dto.finder.CustomerByProjectIdFinderDto;
 
-import java.util.List;
+import javax.validation.Valid;
+import java.util.Optional;
 
 public interface CustomerService {
+    
+    Optional<@Valid CustomerDto> find(@Valid CustomerByProjectIdFinderDto finderDto);
 
-	List<Customer> findAll();
-	Customer save(Customer customer);
-	void delete(Long customerId);
-	Customer getByProjectId(Long projectId);
+    @Valid
+    CustomerDto findOrNotFound(@Valid CustomerByProjectIdFinderDto finderDto);
+
+    @Valid
+    CustomerDto create(@Valid CustomerCreateDto createDto);
+
 }
